<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/flag"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_width="4px"
        android:layout_height="30dp"
        android:background="@color/btn_pressed_green_solid"/>
    <TextView
        android:layout_alignLeft="@+id/flag"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/actionbar_title_size"
        android:text="@string/online_course"/>
    <View
        android:id="@+id/line1"
        android:layout_below="@+id/flag"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:paddingLeft="@dimen/dp_8"
        android:background="@color/divider_list" />
    <RelativeLayout
        android:id="@+id/lvr_one2one"
        android:layout_below="@+id/line1"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_one2one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/one2one"/>
        <TextView
            android:id="@+id/tv_one2one"
            android:layout_toRightOf="@+id/iv_one2one"
            android:paddingLeft="@dimen/dp_8"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/one2one_online_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toRightOf="@+id/iv_one2one"
            android:layout_below="@+id/iv_one2one"
            android:paddingLeft="@dimen/dp_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_text_color_gray"
            android:text="@string/one2one_online_study_detail"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_buy_one2one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_now"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp5"
            android:textColor="@color/live_white"
            app:qmui_backgroundColor="@color/live_yellow"
            app:qmui_radius="8dp"/>
    </RelativeLayout>
    <View
        android:id="@+id/line2"
        android:layout_below="@+id/lvr_one2one"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:paddingLeft="@dimen/dp_8"
        android:background="@color/divider_list" />

    <RelativeLayout
        android:id="@+id/lvr_many2many"
        android:layout_below="@+id/line2"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_many2many"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/many2many"/>
        <TextView
            android:id="@+id/tv_many2many"
            android:layout_toRightOf="@+id/iv_many2many"
            android:paddingLeft="@dimen/dp_8"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/featured_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.linkingwin.education.studyonline.student.view.HorizontalListView
            android:layout_below="@+id/tv_many2many"
            android:id="@+id/hlv_courses"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120">
        </com.linkingwin.education.studyonline.student.view.HorizontalListView>
    </RelativeLayout>
</RelativeLayout>